# Tunnet

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  cache.db  next.config.ts  package-lock.json  package.json  tsconfig.json
.agent/workflows/: implement_libbox_latency_test.md
.github/workflows/: release.yml
core_library/libbox-c-shared/: box.exp  box.lib  go.mod  go.sum  libbox.def  libbox.h  libbox_ios.h  main.go  module.modulemap  platform.go  test.c  test_c
core_library/libbox-ffi-test/: Cargo.toml  build.rs
core_library/libbox-ffi-test/src/: main.rs
planning/: multi_platform.md
src-tauri/: .gitignore  .taurignore  Cargo.toml  Info.plist  build.rs  cache.db  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/en.lproj/: InfoPlist.strings
src-tauri/icons/: icon.icns
src-tauri/resources/: geosite-category-ads-all.srs
src-tauri/scripts/: build-helper.mjs  build_helper.sh  generate-manifest.mjs
src-tauri/src/: config.rs  helper_client.rs  installer.rs  installer.rs.bak2  installer.rs.bak4  installer.rs.bak5  lib.rs  libbox.rs  main.rs  manager.rs  parsing_test_mod.rs  profile.rs  service.rs  settings.rs
src-tauri/src/plugins/: mac_rounded_corners.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/design-debug/: page.tsx
src/app/tray/: page.tsx
src/components/: theme-provider.tsx
src/components/dashboard/: ._server-list.tsx  add-node-modal.tsx  connection-status.tsx  connections-view.tsx  export-modal.tsx  group-card.tsx  groups-view.tsx  location-grid.tsx  locations-map.tsx  locations-view.tsx  log-viewer.tsx  node-editor.tsx  proxies-view.tsx  rules-view.tsx  search-dialog.tsx  server-card.tsx  server-list.tsx  settings-view.tsx  sidebar.tsx  subscriptions-view.tsx  traffic-monitor.tsx
src/components/layout/: app-shell.tsx
src/components/ui/: bottom-nav.tsx  client-toaster.tsx  command.tsx  confirmation-modal.tsx  dialog.tsx  input-modal.tsx  qr-modal.tsx  switch.tsx  window-controls.tsx
src/hooks/: use-modifier-key.ts
src/lib/: country-coords.ts  flags.ts  i18n.ts  latency.ts  regions.ts  rules.ts  settings.ts  utils.ts
src/locales/: en.json  zh-CN.json
website/: next.config.ts  package-lock.json  package.json  tailwind.config.js
website/src/: get-dictionary.ts  i18n-config.ts  middleware.ts
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/[lang]/: layout.tsx  page.tsx
website/src/components/layout/: footer.tsx  locale-switcher.tsx  navbar.tsx
website/src/components/sections/: download.tsx  features.tsx  hero.tsx
website/src/components/ui/: app-window.tsx  (+1 more)
website/src/dictionaries/: en.json  zh.json
website/src/hooks/: use-github-release.ts
