[package]
name = "tunnet"
default-run = "Tunnet"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Tunnet"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
flate2 = "1.0"
tar = "0.4"
futures-util = "0.3"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1.3"
sysinfo = "0.30"
regex = "1.12.2"
os_pipe = "1.2.1"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
sys-locale = "0.3.2"
rqrr = "0.6"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[[bin]]
name = "tunnet-helper"
path = "src/bin/helper.rs"

[profile.release]
strip = false # Do not strip symbols, required for __TAURI_BUNDLE_TYPE__ patching
codegen-units = 1
lto = true
